--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(IDI C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(UI UI.c classificationStatistics.c classificationStatistics.h interfacelib.c interfacelib.h dao.c dao.h UnitTest.c UnitTest.h business.c business.h)
+add_executable(UI UI.c classificationStatistics.c classificationStatistics.h interfacelib.c interfacelib.h dao.c dao.h UnitTest.c UnitTest.h business.c business.h modele.c modele.h)
 
 target_link_libraries(UI m)
