--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,6 @@ cmake-build-debug/cmake_install.cmake
 cmake-build-debug/*
 cmake-build-debug/CMakeFiles/Makefile.cmake
 *.cmake
+.idea/workspace.xml
+cmake-build-debug/CMakeFiles/clion-environment.txt
+cmake-build-debug/CMakeFiles/clion-log.txt
